// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render as another element 1`] = `
<p
  class="wp-components-view css-1ihlkjd"
  data-g2-c16t="true"
  data-g2-component="View"
>
  <span>
    Some people are worth melting for.
  </span>
</p>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-view css-1ihlkjd"
  data-g2-c16t="true"
  data-g2-component="View"
>
  <span>
    Some people are worth melting for.
  </span>
</div>
`;

exports[`props should render with custom styles (Array) 1`] = `
<p
  class="wp-components-view css-gye301"
  data-g2-c16t="true"
  data-g2-component="View"
>
  <span>
    Some people are worth melting for.
  </span>
</p>
`;

exports[`props should render with custom styles (object) 1`] = `
<p
  class="wp-components-view css-16bbktm"
  data-g2-c16t="true"
  data-g2-component="View"
>
  <span>
    Some people are worth melting for.
  </span>
</p>
`;

exports[`props should render with custom styles (string) 1`] = `
<p
  class="wp-components-view css-1g90dnq"
  data-g2-c16t="true"
  data-g2-component="View"
>
  <span>
    Some people are worth melting for.
  </span>
</p>
`;
